# asteroid_destroyer

./: CMakeLists.txt
headers/: asteroid.h  color.h  movement.h  physics.h  sprites.h  window.h
headers/audio/: sound.h
headers/core/: collisions.h  movement.h
headers/entities/: asteroid.h  bullet.h  sprites.h
headers/math/: random.h
src/: color.c  main.c  movement.c  sound.c  sprites.c  time.c
src/audio/: sound.c
src/core/: collisions.c  movement.c
src/entities/: asteroid.c  bullet.c  sprites.c
src/graphics/: window.c
src/math/: random.c
